Set `z-index` on bar response element. Fixes #41

--- a/assets/css/bar.css
+++ b/assets/css/bar.css
@@ -144,6 +144,7 @@
   right: 0;
   top: 0;
   bottom: 0;
+  z-index: 100;
 }
 
 .mctb-close {
